# minlog

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  minlog.hpp
images/: MinLog.xcf
include/: MinLog.hpp
include/MinLog/: MinLog.hpp
libs/: .gitignore
tests/: .gitignore  main.cpp  run.sh
